--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.90.168.43:8081/repository/web1-release/</url>
+	      <url>http://http://52.90.148.153:8081/repository/web1-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.90.168.43:8081/repository/web1-snapshot/</url>
+	      <url>http://http://52.90.148.153:8081/repository/web1-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
