--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://54.224.204.2:9000/</sonar.host.url>
+		<sonar.host.url>http://http://54.146.252.129/:9000/</sonar.host.url>
 		<sonar.login>472faf0441d93956205bbea104e16cc7999ec92b</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
